// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`[domain/hero] hero.tsx > should render the default Hero component 1`] = `
<div>
  <section
    class="styles_section__q0lepz0"
  >
    <div
      class="styles_left__q0lepz1"
    >
      <span
        class="styles_icon__1jklp5o0 styles__1jklp5o1 styles_iconType_type_cloud1__1jklp5o3"
      />
    </div>
    <div
      class="styles_center__q0lepz2"
    >
      <span
        class="styles_icon__1jklp5o0 styles__1jklp5o1 styles_iconType_type_logoStatic__1jklp5o8"
      />
    </div>
    <div
      class="styles_right__q0lepz3"
    >
      <span
        class="styles_icon__1jklp5o0 styles__1jklp5o1 styles_iconType_type_cloud2__1jklp5o4"
      />
      <span
        class="styles_icon__1jklp5o0 styles__1jklp5o1 styles_iconType_type_cloud3__1jklp5o5"
      />
    </div>
  </section>
</div>
`;

exports[`[domain/hero] hero.tsx > should render the soon Hero component 1`] = `
<div>
  <section
    class="styles_section__q0lepz0"
  >
    <div
      class="styles_left__q0lepz1"
    >
      <span
        class="styles_icon__1jklp5o0 styles__1jklp5o1 styles_iconType_type_cloud1__1jklp5o3"
      />
      <span
        class="styles_icon__1jklp5o0 styles__1jklp5o1 styles_iconType_type_cloud4__1jklp5o6"
      />
    </div>
    <div
      class="styles_center__q0lepz2"
    >
      <span
        class="styles_icon__1jklp5o0 styles__1jklp5o1 styles_iconType_type_logoStatic__1jklp5o8"
      />
      <h1
        class="styles_title__q0lepzb"
      >
        視たことのない高専祭を。
        <br />
        新しい世界へご招待します。
        <br />
        Coming soon...
      </h1>
    </div>
    <div
      class="styles_right__q0lepz3"
    >
      <span
        class="styles_icon__1jklp5o0 styles__1jklp5o1 styles_iconType_type_cloud2__1jklp5o4"
      />
      <span
        class="styles_icon__1jklp5o0 styles__1jklp5o1 styles_iconType_type_cloud3__1jklp5o5"
      />
      <span
        class="styles_icon__1jklp5o0 styles__1jklp5o1 styles_iconType_type_cloud5__1jklp5o7"
      />
    </div>
  </section>
</div>
`;
